--- a/file-server-model/pom.xml
+++ b/file-server-model/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>file-server</artifactId>
         <groupId>file</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-SNP</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
