--- a/file-server-web/pom.xml
+++ b/file-server-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>file-server</artifactId>
         <groupId>file</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-SNP</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,7 +20,7 @@
         <dependency>
             <artifactId>file-server-service</artifactId>
             <groupId>file</groupId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-SNP</version>
         </dependency>
     </dependencies>
 
