--- a/file-server-web/src/main/resources/application-default.properties
+++ b/file-server-web/src/main/resources/application-default.properties
@@ -9,7 +9,7 @@ server.session-timeout=1800
 mybatis.config-location=classpath:/mybatis-config.xml
 #mybatis.mapperLocations=classpath*:/mapper/*Mapper.xml
 
-spring.datasource.url=jdbc:mysql://${db.server}/${datasource.schema}?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://${db.server}/${datasource.schema}
 spring.datasource.username=${db.username}
 spring.datasource.password=${db.password}
 spring.datasource.initialSize=5
